--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,6 +11,7 @@ import { cn } from '@/lib/utils';
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Nprd's Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <ThemeProvider />
   </head>
   <body class={cn('min-h-screen font-sans antialiased')}>
