--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,6 +1,7 @@
 ---
 import { GitHubLogoIcon, LinkedInLogoIcon } from '@radix-ui/react-icons';
-import { Button, buttonVariants } from '@/components/ui/button';
+
+import { buttonVariants } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import { GITHUB_URL, LINKEDIN_URL } from '@/constants';
 ---
