♿️ adding aria-label for links

--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -20,6 +20,7 @@ import { GITHUB_URL, LINKEDIN_URL } from '@/constants';
       class={buttonVariants()}
       target="_blank"
       rel="noopener noreferrer"
+      aria-label="LinkedIn profile"
     >
       <LinkedInLogoIcon className="mr-2" /> Linkedin
     </a>
@@ -28,6 +29,7 @@ import { GITHUB_URL, LINKEDIN_URL } from '@/constants';
       class={buttonVariants({ variant: 'outline' })}
       target="_blank"
       rel="noopener noreferrer"
+      aria-label="Github profile"
     >
       <GitHubLogoIcon className="mr-2" /> Github
     </a>
