--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -35,6 +35,7 @@ import { PROJECTS } from '@/constants';
                 'duration-200 group/link',
                 url ? 'hover:text-primary' : 'cursor-not-allowed',
               ]}
+              aria-label={`Visit ${name} website`}
             >
               <h4 class="text-xl font-semibold">{name}</h4>
             </a>
