♿️ improve aria-label

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -30,8 +30,8 @@ const title = 'Peeranat Danaidusadeekul';
           Sorry, we couldn&apos;t find the page you&apos;re looking for.
         </p>
         <div class="mt-8 flex items-center justify-center gap-x-6">
-          <a href="/" class={buttonVariants()} aria-label="Go back to homepage"
-            >Go back home</a
+          <a href="/" class={buttonVariants()} aria-label="Back to home"
+            >Back to home</a
           >
         </div>
       </div>
