✨ use new mode toggle element

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,7 +32,7 @@ const description = `Dive into Peeranat Danaidusadeekul's coding journey! Explor
   </head>
   <body class={cn('min-h-screen font-sans antialiased')}>
     <div class="relative flex min-h-screen flex-col">
-      <Header />
+      <Header client:load />
       <div class="flex-1">
         <slot />
       </div>
