--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import { SEO } from 'astro-seo';
 
-import { Header } from '@/components/layout/header';
+import Header from '@/components/layout/Header.astro';
 import { Footer } from '@/components/layout/footer';
 import ThemeProvider from '@/components/theme/ThemeProvider.astro';
 import { cn } from '@/lib/utils';
@@ -32,7 +32,7 @@ const description = `Dive into Peeranat Danaidusadeekul's coding journey! Explor
   </head>
   <body class={cn('min-h-screen font-sans antialiased')}>
     <div class="relative flex min-h-screen flex-col">
-      <Header client:load />
+      <Header />
       <div class="flex-1">
         <slot />
       </div>
