🎨 change class:list to class

--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -13,7 +13,7 @@ import { PROJECTS } from '@/constants';
   <ul>
     {
       PROJECTS.map(({ name, description, stacks, url, imageUrl }) => (
-        <li class:list="group relative grid grid-cols-4 gap-0 mt:gap-4 mt-2">
+        <li class="group relative grid grid-cols-4 gap-0 mt:gap-4 mt-2">
           <div class="col-span-4 sm:col-span-1 p-2">
             {imageUrl ? (
               <Image
