💄 add selection color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,6 +52,10 @@
 }
 
 @layer base {
+  ::selection {
+    color: hsl(var(--primary-foreground));
+    background: hsl(var(--primary));
+  }
   * {
     @apply border-border scroll-smooth;
   }
