🩹 use `client:only` to load on all devices

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -23,7 +23,7 @@ import { RESUME_URL } from '@/constants';
       >
         Get my resume
       </a>
-      <ModeToggle client:load />
+      <ModeToggle client:only />
     </div>
   </div>
 </header>
