🧱 migrate to astro 3

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,6 +27,9 @@ const description = `Dive into Peeranat Danaidusadeekul's coding journey! Explor
           image: '/og-image.png',
         },
       }}
+      extend={{
+        link: [{rel: 'sitemap',href:"/sitemap-index.xml" }]
+      }}
     />
     <ThemeProvider />
   </head>
