--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 import { Badge } from '@/components/ui/badge';
 import { PROJECTS } from '@/constants';
