--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,7 +28,7 @@ const description = `Dive into Peeranat Danaidusadeekul's coding journey! Explor
         },
       }}
       extend={{
-        link: [{rel: 'sitemap',href:"/sitemap-index.xml" }]
+        link: [{ rel: 'sitemap', href: '/sitemap-index.xml' }],
       }}
     />
     <ThemeProvider />
