⚡️ add react to client only mode

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -23,7 +23,7 @@ import { RESUME_URL } from '@/constants';
       >
         Get my resume
       </a>
-      <ModeToggle client:only />
+      <ModeToggle client:only="react" />
     </div>
   </div>
 </header>
